...
                ),
                textStyle = TextStyle(
                    fontSize = MaterialTheme.typography.h6.fontSize,
                    color = Color.DarkGray,
                    fontWeight = FontWeight.Bold
                ),
                label = { Text(text = "New Count") },
            )

            Column(
                modifier = Modifier
                   .fillMaxWidth()
                   .padding(all = 16.dp)
...
                    },
                    colors = ButtonDefaults.buttonColors(
                        backgroundColor = Color.Red,
                    )
                ){
                    Text(
                        text = "Reset",
                        style = TextStyle(
                            fontSize = MaterialTheme.typography.body1.fontSize,
                            fontWeight = FontWeight.Bold,
                            color = Color.White
                        )
                    )
...
