...
class CounterViewModel : ViewModel() {

    private val _screenState : MutableState<MainScreenState> = mutableStateOf(
        // initial state of the screen
        MainScreenState(
            inputValue = "",
            resultValue = "Total is ...",
            isCountButtonVisible = false
        )
    )
    val screenState : State<MainScreenState> = _screenState

    private val _uiEventFlow = MutableSharedFlow<UIEvent>()
...
